k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-shop
  labels:
    environment: production
