k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-shop
  labels:
    app: online-shop
spec:
  type: ClusterIP
  selector:
    app: online-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
